--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,13 @@
 			<artifactId>json-path</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version>
+    
+</dependency>
+
 	</dependencies>
 </project>
