--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,19 @@
 			<artifactId>json-path</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-		
+
 		<dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.24</version>
-    
-</dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-paranamer</artifactId>
+			<version>2.2.3</version>
+		</dependency>
 
 	</dependencies>
 </project>
