--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 			<artifactId>jackson-module-paranamer</artifactId>
 			<version>2.2.3</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>json-schema-validator</artifactId>
+    <version>5.3.2</version>
+</dependency>
+		
 
 	</dependencies>
 </project>
